--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Encuesta de partidos políticos</title>
-	<link rel="stylesheet" href="style.css">
-	<script type="text/javascript" src="script.js"></script>
+	<link rel="stylesheet" href="./style.css">
+	<script type="text/javascript" src="./script.js"></script>
 </head>
 <body>
 	<header>
