--- a/index.html
+++ b/index.html
@@ -1,62 +1,74 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
 	<meta charset="UTF-8">
-	<title>Encuesta de partidos políticos</title>
-	<link rel="stylesheet" href="./style.css">
-	<script type="text/javascript" src="./script.js"></script>
+	<title>Elecciones</title>
+	<link rel="stylesheet" href="styles.css">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 	<header>
-		<h1>Encuesta de Partidos Políticos</h1>
+		<h1>Elecciones Presidenciales</h1>
+		<p>Elige tu candidato y vota</p>
 	</header>
-	<main>
-		<div class="container">
-			<div class="party">
-				<img src="https://i.ibb.co/p1Fyc0w/512px-Morena-logo-alt-svg.png" alt="Morena">
-				<div class="vote-info">
-					<div class="vote-count" id="morena-count">0</div>
-					<div class="vote-percentage" id="morena-percentage">0%</div>
-					<button class="vote-button" onclick="vote('morena')">Votar</button>
-				</div>
-			</div>
-			<div class="party">
-				<img src="https://i.ibb.co/zF1pCNx/1200px-Logo-Partido-Verde-M-xico-svg.png" alt="Partido Verde">
-				<div class="vote-info">
-					<div class="vote-count" id="verde-count">0</div>
-					<div class="vote-percentage" id="verde-percentage">0%</div>
-					<button class="vote-button" onclick="vote('verde')">Votar</button>
-				</div>
-			</div>
-			<div class="party">
-				<img src="https://i.ibb.co/LS42fLD/1022px-PRI-logo-Mexico-svg.png" alt="PRI">
-				<div class="vote-info">
-					<div class="vote-count" id="pri-count">0</div>
-					<div class="vote-percentage" id="pri-percentage">0%</div>
-					<button class="vote-button" onclick="vote('pri')">Votar</button>
-				</div>
-			</div>
-			<div class="party">
-				<img src="https://i.ibb.co/0CYjTYQ/PAN-logo-Mexico-svg.png" alt="PAN">
-				<div class="vote-info">
-					<div class="vote-count" id="pan-count">0</div>
-					<div class="vote-percentage" id="pan-percentage">0%</div>
-					<button class="vote-button" onclick="vote('pan')">Votar</button>
-				</div>
-			</div>
-			<div class="party">
-				<img src="https://i.ibb.co/D70D27C/1200px-PSI-logo-svg.png" alt="PSI">
-				<div class="vote-info">
-					<div class="vote-count" id="psi-count">0</div>
-					<div class="vote-percentage" id="psi-percentage">0%</div>
-					<button class="vote-button" onclick="vote('psi')">Votar</button>
-				</div>
+
+	<div class="container">
+		<div class="party">
+			<img src="morena.png" alt="MORENA">
+			<h2>MORENA</h2>
+			<div class="vote-info">
+				<p class="vote-count" id="morena-count">0</p>
+				<p class="vote-percentage" id="morena-percentage">0%</p>
+				<button class="vote-button" onclick="vote('morena')">Votar</button>
 			</div>
 		</div>
-	</main>
+
+		<div class="party">
+			<img src="verde.png" alt="VERDE">
+			<h2>VERDE</h2>
+			<div class="vote-info">
+				<p class="vote-count" id="verde-count">0</p>
+				<p class="vote-percentage" id="verde-percentage">0%</p>
+				<button class="vote-button" onclick="vote('verde')">Votar</button>
+			</div>
+		</div>
+
+		<div class="party">
+			<img src="pri.png" alt="PRI">
+			<h2>PRI</h2>
+			<div class="vote-info">
+				<p class="vote-count" id="pri-count">0</p>
+				<p class="vote-percentage" id="pri-percentage">0%</p>
+				<button class="vote-button" onclick="vote('pri')">Votar</button>
+			</div>
+		</div>
+
+		<div class="party">
+			<img src="pan.png" alt="PAN">
+			<h2>PAN</h2>
+			<div class="vote-info">
+				<p class="vote-count" id="pan-count">0</p>
+				<p class="vote-percentage" id="pan-percentage">0%</p>
+				<button class="vote-button" onclick="vote('pan')">Votar</button>
+			</div>
+		</div>
+
+		<div class="party">
+			<img src="psi.png" alt="PSI">
+			<h2>PSI</h2>
+			<div class="vote-info">
+				<p class="vote-count" id="psi-count">0</p>
+				<p class="vote-percentage" id="psi-percentage">0%</p>
+				<button class="vote-button" onclick="vote('psi')">Votar</button>
+			</div>
+		</div>
+	</div>
+
 	<footer>
-		<p>Encuesta de partidos políticos &copy; 2023</p>
+		<p>Resultados actualizados <span id="time"></span></p>
 	</footer>
+
+	<script src="script.js"></script>
 </body>
 </html>
 
