--- a/index.html
+++ b/index.html
@@ -1,54 +1,61 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Elecciones</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Incluir la hoja de estilo CSS personalizada -->
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h1>Elecciones</h1>
-    <p>Por favor, vote por su partido favorito:</p>
-    <div class="partidos">
-      <div class="partido morena">
-        <img src="https://via.placeholder.com/150x150?text=MORENA" alt="MORENA">
-        <button onclick="vote('morena')">Votar</button>
-        <p>Votos: <span id="morena-count">0</span></p>
-        <p>Porcentaje: <span id="morena-percentage">0%</span></p>
-      </div>
-      <div class="partido verde">
-        <img src="https://via.placeholder.com/150x150?text=VERDE" alt="VERDE">
-        <button onclick="vote('verde')">Votar</button>
-        <p>Votos: <span id="verde-count">0</span></p>
-        <p>Porcentaje: <span id="verde-percentage">0%</span></p>
-      </div>
-      <div class="partido pri">
-        <img src="https://via.placeholder.com/150x150?text=PRI" alt="PRI">
-        <button onclick="vote('pri')">Votar</button>
-        <p>Votos: <span id="pri-count">0</span></p>
-        <p>Porcentaje: <span id="pri-percentage">0%</span></p>
-      </div>
-      <div class="partido pan">
-        <img src="https://via.placeholder.com/150x150?text=PAN" alt="PAN">
-        <button onclick="vote('pan')">Votar</button>
-        <p>Votos: <span id="pan-count">0</span></p>
-        <p>Porcentaje: <span id="pan-percentage">0%</span></p>
-      </div>
-      <div class="partido psi">
-        <img src="https://via.placeholder.com/150x150?text=PSI" alt="PSI">
-        <button onclick="vote('psi')">Votar</button>
-        <p>Votos: <span id="psi-count">0</span></p>
-        <p>Porcentaje: <span id="psi-percentage">0%</span></p>
-      </div>
-    </div>
-    <!-- Incluir la versión alojada de jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Incluir el archivo de JavaScript personalizado -->
-    <script src="script.js"></script>
-  </body>
+<html lang="es">
+<head>
+	<meta charset="UTF-8">
+	<title>Encuesta de partidos políticos</title>
+	<link rel="stylesheet" href="style.css">
+	<script type="text/javascript" src="script.js"></script>
+</head>
+<body>
+	<header>
+		<h1>Encuesta de Partidos Políticos</h1>
+	</header>
+	<main>
+		<div class="container">
+			<div class="party">
+				<img src="https://i.ibb.co/p1Fyc0w/512px-Morena-logo-alt-svg.png" alt="Morena">
+				<div class="vote-info">
+					<div class="vote-count" id="morena-count">0</div>
+					<div class="vote-percentage" id="morena-percentage">0%</div>
+					<button class="vote-button" onclick="vote('morena')">Votar</button>
+				</div>
+			</div>
+			<div class="party">
+				<img src="https://i.ibb.co/zF1pCNx/1200px-Logo-Partido-Verde-M-xico-svg.png" alt="Partido Verde">
+				<div class="vote-info">
+					<div class="vote-count" id="verde-count">0</div>
+					<div class="vote-percentage" id="verde-percentage">0%</div>
+					<button class="vote-button" onclick="vote('verde')">Votar</button>
+				</div>
+			</div>
+			<div class="party">
+				<img src="https://i.ibb.co/LS42fLD/1022px-PRI-logo-Mexico-svg.png" alt="PRI">
+				<div class="vote-info">
+					<div class="vote-count" id="pri-count">0</div>
+					<div class="vote-percentage" id="pri-percentage">0%</div>
+					<button class="vote-button" onclick="vote('pri')">Votar</button>
+				</div>
+			</div>
+			<div class="party">
+				<img src="https://i.ibb.co/0CYjTYQ/PAN-logo-Mexico-svg.png" alt="PAN">
+				<div class="vote-info">
+					<div class="vote-count" id="pan-count">0</div>
+					<div class="vote-percentage" id="pan-percentage">0%</div>
+					<button class="vote-button" onclick="vote('pan')">Votar</button>
+				</div>
+			</div>
+			<div class="party">
+				<img src="https://i.ibb.co/D70D27C/1200px-PSI-logo-svg.png" alt="PSI">
+				<div class="vote-info">
+					<div class="vote-count" id="psi-count">0</div>
+					<div class="vote-percentage" id="psi-percentage">0%</div>
+					<button class="vote-button" onclick="vote('psi')">Votar</button>
+				</div>
+			</div>
+		</div>
+	</main>
+	<footer>
+		<p style="border-top: 1px solid #0072c6; padding-top: 10px;">Encuesta de partidos políticos &copy; 2023</p>
+	</footer>
+</body>
 </html>
-
-		
-		
-
