--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     </div>
     <button id="startButton">Encender</button>
     <button id="stopButton" disabled>Apagar</button>
-    <script src="script.js"></script>
+    <script src="icecast.js"></script>
   </body>
 </html>
-
-
